--- a/content/grant/NSF2012.md
+++ b/content/grant/NSF2012.md
@@ -3,7 +3,7 @@ date: "2012-02-15"
 # Grant title.
 title: "A Systems Approach to the Development and Function of C4 Photosynthesis"
 # Grant summary to display on homepage.
-summary: "Nelson Thomas, Thomas Brutnell, Klaas van Wijk, Todd Mockler, **Peng Liu**"
+summary: "**PI**, *02/15/2012 - 01/31/2017*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
@@ -18,7 +18,7 @@ header:
 ### [Abstract](http://grantome.com/grant/NSF/IOS-1127017)
 
 ### PIs
-Nelson Thomas (leading PI, Yale University); Thomas Brutnell and Todd Mockler (Danforth Plant Science Center); **Peng Liu** (Iowa State University); Chris Myers, Robert Turgeon, Qi Sun, and Klaas van Wijk (Cornell University); and Joyce van Eck (Boyce Thompson Institute)
+Timothy Nelson (leading PI, Yale University); Thomas Brutnell and Todd Mockler (Danforth Plant Science Center); **Peng Liu** (Iowa State University); Chris Myers, Robert Turgeon, Qi Sun, and Klaas van Wijk (Cornell University); and Joyce van Eck (Boyce Thompson Institute).
 
 ### Source of Support
 [NSF](https://www.nsf.gov/)
@@ -26,8 +26,5 @@ Nelson Thomas (leading PI, Yale University); Thomas Brutnell and Todd Mockler (D
 ### Total Award Amount
 $ 8,386,495
 
-### My portion
-$ 372,843
-
 ### Total Award Period Covered
-02/15/2012 - 01/31/2016
+02/15/2012 - 01/31/2017
