--- a/content/publication/JCN2017.md
+++ b/content/publication/JCN2017.md
@@ -2,18 +2,18 @@
 abstract: The vertebrate retina is a specialized photosensitive tissue comprised of six neuronal and one glial cell types, each of which develops in prescribed proportions at overlapping timepoints from a common progenitor pool. While each of these cells has a specific function contributing to proper vision in the mature animal, their differential representation in the retina as well as the presence of distinctive cellular subtypes makes identifying the transcriptomic signatures that lead to each retinal cell's fate determination and development challenging. We have analyzed transcriptomes from individual cells isolated from the chick retina throughout retinogenesis. While we focused our efforts on the retinal ganglion cells, our transcriptomes of developing chick cells also contained representation from multiple retinal cell types, including photoreceptors and interneurons at different stages of development. Most interesting was the identification of transcriptomes from individual mixed lineage progenitor cells in the chick as these cells offer a window into the cell fate decision-making process. Taken together, these data sets will enable us to uncover the most critical genes acting in the steps of cell fate determination and early differentiation of various retinal cell types.
 abstract_short: ""
 authors:
-- Lauren A Laboissonniere
-- Gregory M Martin
-- Jillian J Goetz
+- Lauren A. Laboissonniere
+- Gregory M. Martin
+- Jillian J. Goetz
 - Ran Bi
 - Brock Pope
 - Kallie Weinand
 - Laura Ellson
 - Diane Fru
 - Miranda Lee
-- Andrea K Wester
+- Andrea K. Wester
 - Peng Liu
-- Jeffrey M Trimarchi
+- Jeffrey M. Trimarchi
 date: 2017-08-15
 header:
   caption: 'Single cell transcriptome profiling of developing chick retinal cells'
@@ -25,13 +25,13 @@ publication_short: In *JCN*
 publication_types:
 - "2"
 selected: true
-title: "Laboissonniere L. A., Martin G. M., Goetz J. J., Bi R., Pope B., Weinand K., Ellson L., Fru D., Lee M., Wester A. K., Liu P., Trimarchi J. M. (2017). Single cell transcriptome profiling of developing chick retinal cells. J Comp Neurol. 2017 Aug 15; 525(12): 2735-2781."
+title: "L. Laboissonniere, G.  M. Martin, J. J Goetz, R. Bi, B. Pope, K. Weinand, L. Ellson, D. Fru, M. Lee, A. K Wester, P. Liu, and J. M Trimarchi (2017). Single cell transcriptome profiling of developing chick retinal cells. The Journal of Comparative Neurology, 2017 Aug 15; 525(12): 2735-2781."
 url_code: ''
 url_custom:
 - name: Link
   url: http://onlinelibrary.wiley.com/doi/10.1002/cne.24241/full
 url_dataset: ''
-url_pdf: http://onlinelibrary.wiley.com/wol1/doi/10.1002/cne.24241/full
+url_pdf: ""
 url_project: ''
 url_slides: ''
 url_video: ''
