--- a/content/grant/DOE2015.md
+++ b/content/grant/DOE2015.md
@@ -3,7 +3,7 @@ date: "2015-08-15"
 # Grant title.
 title: "Systems Analysis of the Physiological and Molecular Mechanisms of Sorghum Nitrogen Use Efficiency, Water Use Efficiency, and Interactions with the Soil Microbiome"
 # Grant summary to display on homepage.
-summary: "**PI**, *08/15/2015 - 07/14/2020*"
+summary: "**Co-PI**, *08/15/2015 - 08/14/2020*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
@@ -27,4 +27,4 @@ D. Schachtman (leading PI, University of Nebraska-Lincoln); R. Bart, T. Brutnell
 $ 13,460,684
 
 ### Total Award Period Covered
-08/15/2015 - 07/14/2020
+08/15/2015 - 08/14/2020
