--- a/content/grant/LAS2019.md
+++ b/content/grant/LAS2019.md
@@ -1,9 +1,9 @@
 ---
-date: "2019-01-01"
+date: "2018-01-01"
 # Grant title.
 title: "The molecular hallmark of epigenetic control in high-performing yeast"
 # Grant summary to display on homepage.
-summary: "**Co-investigator**, *Pending*"
+summary: "**Co-PI**, *01/01/2018-12/31/2019*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
@@ -18,13 +18,14 @@ header:
 ### Abstract
 
 ### PIs
-Huang (Iowa State University).
+Huang (Iowa State University); and *Peng Liu* (Iowa State University).
 
 ### Source of Support
-LAS signature research incubator, Iowa State University
+LAS Iowa State University
 
 ### Total Award Amount
 
 
 ### Total Award Period Covered
+01/01/2018 - 12/31/2019
 
