--- a/content/grant/NIH2013.md
+++ b/content/grant/NIH2013.md
@@ -18,7 +18,7 @@ header:
 ### [Abstract](http://grantome.com/grant/NIH/R01-GM109458-01)
 
 ### PIs
-Daniel S. Nettleton (Iowa State University).
+Daniel S. Nettleton (Iowa State University); J. Niemi (Iowa State University); *Peng Liu* (Iowa State University); and P. Schnable.
 
 
 ### Source of Support
