--- a/content/grant/NSF2019.md
+++ b/content/grant/NSF2019.md
@@ -3,7 +3,7 @@ date: "2019-01-01"
 # Grant title.
 title: "The molecular hallmark of epigenetic control in high-performing yeast"
 # Grant summary to display on homepage.
-summary: "**Co-investigator**, *Pending*"
+summary: "**Co-PI**, *01/01/2019-12/31/2022*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
@@ -18,7 +18,7 @@ header:
 ### Abstract
 
 ### PIs
-Zengyi Shao (Iowa State University).
+Zengyi Shao (Iowa State University); and *Peng Liu* (Iowa State University).
 
 ### Source of Support
 [NSF](https://www.nsf.gov/)
