--- a/content/grant/USDA2007.md
+++ b/content/grant/USDA2007.md
@@ -18,7 +18,7 @@ header:
 ### [Abstract](https://reeis.usda.gov/web/crisprojectpages/0211405-inorganic-carbon-transport-and-the-co2-concentrating-mechanism-of-chlamydomonas.html)
 
 ### PIs
-Martin Spalding (Iowa State University).
+Martin Spalding (Iowa State University); and *Peng Liu* (Iowa State University).
 
 
 ### Source of Support
