--- a/content/grant/LAS2019.md
+++ b/content/grant/LAS2019.md
@@ -3,7 +3,7 @@ date: "2018-01-01"
 # Grant title.
 title: "The molecular hallmark of epigenetic control in high-performing yeast"
 # Grant summary to display on homepage.
-summary: "**Co-PI**, *01/01/2018-12/31/2019*"
+summary: "**Co-PI**, *01/01/2018 - 12/31/2019*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
@@ -21,7 +21,7 @@ header:
 Huang (Iowa State University); and *Peng Liu* (Iowa State University).
 
 ### Source of Support
-LAS Iowa State University
+LAS Iowa State University.
 
 ### Total Award Amount
 
