--- a/content/grant/PIRS2018.md
+++ b/content/grant/PIRS2018.md
@@ -18,7 +18,7 @@ header:
 ### [Abstract](https://www.vpresearch.iastate.edu/news/iowa-state-announces-recipients-fall-2017-pirs-research-seed-grants/)
 
 ### PIs
-Zengyi Shao (Iowa State University).
+Zengyi Shao (Iowa State University); *Peng Liu* (Iowa State University).
 
 
 ### Source of Support
