--- a/content/grant/PIRS2018.md
+++ b/content/grant/PIRS2018.md
@@ -1,9 +1,9 @@
 ---
-date: "2018-01-01"
+date: "2019-05-27"
 # Grant title.
 title: "The molecular hallmark of epigenetic control in high-performing yeast"
 # Grant summary to display on homepage.
-summary: "**Co-investigator**, *01/01/2018 - 12/31/2019*"
+summary: "**Co-PI**, *01/01/2018 - 12/31/2019*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
