--- a/content/publication/IJMS2019.md
+++ b/content/publication/IJMS2019.md
@@ -23,7 +23,7 @@ publication_short: In *IJMS*
 publication_types:
 - "2"
 selected: true
-title: "L. Dong 1,L. Qin, X.Dai, Z. Ding, R. Bi, P. Liu, Y. Chen, T. Brutnell, X. Wang, and P. Li (2019) Transcriptomic Analysis of Leaf Sheath Maturation in Maize, International Journal of Molecular Sciences, 20(10), 2472."
+title: "L. Dong, L. Qin, X.Dai, Z. Ding, R. Bi, P. Liu, Y. Chen, T. Brutnell, X. Wang, and P. Li (2019) Transcriptomic Analysis of Leaf Sheath Maturation in Maize, International Journal of Molecular Sciences, 20(10), 2472."
 url_code: ''
 url_custom:
 - name: Link
