--- a/content/grant/NSF2012.md
+++ b/content/grant/NSF2012.md
@@ -3,7 +3,7 @@ date: "2017-01-31"
 # Grant title.
 title: "A Systems Approach to the Development and Function of C4 Photosynthesis"
 # Grant summary to display on homepage.
-summary: "**PI**, *02/15/2012 - 01/31/2017*"
+summary: "**Co-PI**, *02/15/2012 - 01/31/2017*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
