--- a/content/grant/USDA2008.md
+++ b/content/grant/USDA2008.md
@@ -3,7 +3,7 @@ date: "2012-02-01"
 # Grant title.
 title: "Host:Pathogen Interactions in Avian Colibacillosis: a Systems-Based, Functional Genomics Approach"
 # Grant summary to display on homepage.
-summary: "**Co-investigator**, *02/01/2008 - 01/31/2012*"
+summary: "**Co-PD**, *02/01/2008 - 01/31/2012*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
@@ -18,7 +18,7 @@ header:
 ### [Abstract](https://reeis.usda.gov/web/crisprojectpages/0213085-hostpathogen-interactions-in-avian-colibacillosis-a-systems-based-functional-genomics-approach.html)
 
 ### PIs
-Nolan (PI), Johnson, Lamont, Kariyawasam, and Trampel.
+Nolan (PI), Johnson, Lamont, **Peng**, Kariyawasam, and Trampel.
 
 
 ### Source of Support
