--- a/content/grant/USDA2009.md
+++ b/content/grant/USDA2009.md
@@ -18,7 +18,7 @@ header:
 ### [Abstract](https://reeis.usda.gov/web/crisprojectpages/0220256-functional-genomics-of-a-highly-virulent-campylobacter-jejuni-clone-causing-sheep-abortion.html)
 
 ### PIs
-Zhang (PI); Yaeger; *Peng Liu* (Iowa State University); and Sahin (Iowa State University).
+Zhang (PI); Yaeger; **Peng Liu** (Iowa State University); and Sahin (Iowa State University).
 
 
 ### Source of Support
