--- a/content/grant/USDA2010.md
+++ b/content/grant/USDA2010.md
@@ -18,7 +18,7 @@ header:
 ### [Abstract](https://portal.nifa.usda.gov/web/crisprojectpages/0219208-integration-of-quantitative-genetics-statistics-and-computational-biology-for-animal-genetic-improvement.html)
 
 ### PIs
-Dekkers, and Lamont (Iowa State University).
+Dekkers (Iowa State University), **Peng** (Iowa State University), and Lamont (Iowa State University).
 
 
 ### Source of Support
