--- a/content/grant/USDA2011.md
+++ b/content/grant/USDA2011.md
@@ -3,7 +3,7 @@ date: "2016-03-01"
 # Grant title.
 title: "Improving nutrient utilization and feed efficiency through research and extension to enhance pig industry sustainability and competitiveness"
 # Grant summary to display on homepage.
-summary: "**Co-investigator**, *03/01/2011 - 02/29/2016*"
+summary: "**Co-PD**, *03/01/2011 - 02/29/2016*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
