--- a/content/talk/NYU2018.md
+++ b/content/talk/NYU2018.md
@@ -3,8 +3,8 @@ date: 2018-05-01
 title: "Detection of Gene Expression Heterosis with RNA-Sequencing Data"
 abstract: "Heterosis, also called hybrid vigor, refers to the improvements in the phenotype of hybrid offspring relative to its two inbred parents. Although het- erosis phenomenon is widely applied in agriculture, the mechanism of heterosis is still unknown. Recent advances in RNA-sequencing (RNA-seq) technology have provided an opportunity to understand phenotypic heterosis at the molec- ular level. It is challenging to identify gene expression heterosis via comparing expression levels of tens of thousands of genes in parental inbred lines and their hybrid offspring with RNA-seq data. One difficulty is to avoid the dependence on parametric assumptions, the other is to control false discovery rate (FDR) for the multiple testing error in RNA-seq data analysis. So far, the detection of gene expression heterosis with RNA-seq data is lack of study. In this paper, we de- velop a semi-parametric Bayesian approach to model the RNA-seq data, with a Dirichlet process as the prior model for the distribution of fold changes between each inbred parent versus the hybrid offspring respectively. The MCMC sam- pling scheme with Gibbs algorithm is then developed for identifying heterosis genes. Simulation results demonstrate that our proposed method outperforms other methods used to detect gene expression heterosis."
 abstract_short: ""
-event: 'Campus Talk'
-event_url: ''
+event: 'New York University School of Medicine'
+event_url: 'https://med.nyu.edu/'
 location: 'New York University School of Medicine, New York, New York, USA'
 header:
   caption: 'Detection of Gene Expression Heterosis with RNA-Sequencing Data'
