--- a/content/talk/SDAU2014.md
+++ b/content/talk/SDAU2014.md
@@ -3,8 +3,8 @@ date: 2014-07-01
 title: "Statistical Design and Analysis of RNA-seq Data"
 abstract: ""
 abstract_short: ""
-event: ''
-event_url: ''
+event: 'Shandong Agricultural University'
+event_url: 'http://www.sdau.edu.cn/'
 location: "Shandong Agricultural University, Tai'an, Shandong, China"
 header:
   caption: 'Statistical Design and Analysis of RNA-seq Data'
