--- a/content/talk/JSM2021.md
+++ b/content/talk/JSM2021.md
@@ -1,12 +1,12 @@
 ---
-date: 2021-10-07
+date: 2021-08-31
 title: "Feature selection for microbiome studies in the presence of confounding using standardization"
-abstract: "."
+abstract: "Developing microbial interventions for treatment of disease and optimization of crop yields requires identification of microbiome features that impact the outcome in the population of interest. That task is challenging because of the high dimensionality of microbiome data and the confounding that results from the interactions among host, environment, and microbiome. In the presence of such confounding, variable selection and estimation procedures may have unsatisfactory performance. In this talk, we aim to estimate population-level effects of individual microbiome features while controlling for confounding by a categorical variable. We propose feature screening, selection, and estimation conditional on each stratum of the confounder followed by a standardization approach to estimation of population-level effects of individual features. Simulation studies demonstrate the advantages of our approach in recovering relevant features. We conducted a study of the rhizosphere microbiome of sorghum in which nitrogen fertilizer application is a confounding variable and our proposed approach identified microbial taxa that are consistent with biological understanding."
 event: 'JSM'
-event_url: 'https://www.stat.iastate.edu/dept-seminar-peng-liu'
-location: 'USA'
+event_url: 'https://ww2.amstat.org/meetings/jsm/2021/onlineprogram/AbstractDetails.cfm?abstractid=316635'
+location: 'Online'
 header:
-  caption: 'Feature Selection in Microbiome Studies'
+  caption: 'Feature selection for microbiome studies in the presence of confounding using standardization'
   image: ''
 selected: true
 math: true
