--- a/content/talk/PSI2019.md
+++ b/content/talk/PSI2019.md
@@ -1,13 +1,13 @@
 ---
-date: 2014-10-01
-title: "Several statistical methods and models in plant genomics studies"
+date: 2019-04-30
+title: "Development of Statistical Methods for `omics Data Analysis"
 abstract: ""
 abstract_short: ""
 event: 'PSI Predictive Phenomics Workshop'
 event_url: 'https://www.psi.iastate.edu/'
 location: 'Iowa State University, Ames, Iowa, USA'
 header:
-  caption: 'Several statistical methods and models in plant genomics studies'
+  caption: 'Development of Statistical Methods for `omics Data Analysis'
   image: ''
 selected: true
 math: true
