--- a/content/grant/NIH2019.md
+++ b/content/grant/NIH2019.md
@@ -1,7 +1,7 @@
 ---
 date: "2020-01-02"
 # Grant title.
-title: "Dietary Intervention Strategies to Support Methyl Group Metabolism in Polycystic Ovary Syndrome, together with K. Schalinske"
+title: "Dietary Intervention Strategies to Support Methyl Group Metabolism in Polycystic Ovary Syndrome"
 # Grant summary to display on homepage.
 summary: "**Co-investigator**, *02/25/2019 to 01/31/2020*"
 # Tags: can be used for filtering projects.
@@ -11,14 +11,13 @@ tags: [""]
 math: false
 # Optional featured image (relative to static/img/ folder).
 header:
-  caption: "Dietary Intervention Strategies to Support Methyl Group Metabolism in Polycystic Ovary Syndrome, together with K. Schalinske"
+  caption: "Dietary Intervention Strategies to Support Methyl Group Metabolism in Polycystic Ovary Syndrome"
   image: ""
 ---
 
-### [Abstract]()
 
 ### PI
-
+K. Schalinske; **Peng Liu** (Iowa State University)
 
 ### Source of Support
 [NIH](https://www.nih.gov/)
