--- a/content/grant/NIH2021.md
+++ b/content/grant/NIH2021.md
@@ -1,7 +1,7 @@
 ---
 date: "2021-06-04"
 # Grant title.
-title: "Global Effects of Flavivirus sfRNA on Translation Determined by Ribosome Profiling, together with W.A. Miller"
+title: "Global Effects of Flavivirus sfRNA on Translation Determined by Ribosome Profiling"
 # Grant summary to display on homepage.
 summary: "**Co-investigator**, *6/04/2021 - 05/31/2023*"
 # Tags: can be used for filtering projects.
@@ -11,14 +11,13 @@ tags: [""]
 math: false
 # Optional featured image (relative to static/img/ folder).
 header:
-  caption: "Global Effects of Flavivirus sfRNA on Translation Determined by Ribosome Profiling, together with W.A. Miller"
+  caption: "Global Effects of Flavivirus sfRNA on Translation Determined by Ribosome Profiling"
   image: ""
 ---
 
-### [Abstract]()
 
 ### PI
-
+W.A. Miller (Iowa State University); **Peng Liu** (Iowa State University)
 
 ### Source of Support
 [NIH](https://www.nih.gov/)
