--- a/content/grant/PSI2011.md
+++ b/content/grant/PSI2011.md
@@ -16,7 +16,7 @@ header:
 ---
 
 ### Source of Support
-[Plant Sciences Institute, Iowa State University](https://plantsciences.iastate.edu/)
+[Plant Sciences Institute, Iowa State University](https://www.psi.iastate.edu/faculty-scholars)
 
 ### Total Award Amount
 $ 250,000
