--- a/content/grant/NIH2020.md
+++ b/content/grant/NIH2020.md
@@ -1,7 +1,7 @@
 ---
 date: "2021-05-20"
 # Grant title.
-title: "Investigating Obesity-Induced Altered Ovarian Intracellular Signaling, together with Keating"
+title: "Investigating Obesity-Induced Altered Ovarian Intracellular Signaling"
 # Grant summary to display on homepage.
 summary: "**Co-investigator**, *01/01/2020 - 10/31/2024*"
 # Tags: can be used for filtering projects.
@@ -11,14 +11,14 @@ tags: [""]
 math: false
 # Optional featured image (relative to static/img/ folder).
 header:
-  caption: "Investigating Obesity-Induced Altered Ovarian Intracellular Signaling, together with Keating"
+  caption: "Investigating Obesity-Induced Altered Ovarian Intracellular Signaling"
   image: ""
 ---
 
 ### [Abstract](http://grantome.com/grant/NIH/R01-ES030341-01A1)
 
 ### PI
-**Peng Liu** (Iowa State University)
+Aileen Keating; **Peng Liu** (Iowa State University)
 
 
 ### Source of Support
