--- a/content/grant/PSI2018.md
+++ b/content/grant/PSI2018.md
@@ -3,7 +3,7 @@ date: "2021-06-30"
 # Grant title.
 title: "PSI faculty scholar of Plant Phenomics"
 # Grant summary to display on homepage.
-summary: "**PI**, *02/01/2018 - 06/30/2024*"
+summary: "**sole PI**, *02/01/2018 - 06/30/2024*"
 # Tags: can be used for filtering projects.
 # Example: tags = ["machine-learning", "deep-learning"]
 tags: [""]
@@ -15,16 +15,14 @@ header:
   image: ""
 ---
 
-### [Abstract](https://plantsciences.iastate.edu/about_us/psi_faculty_scholars/)
-
 ### PIs
 **Peng Liu** (Iowa State University).
 
 ### Source of Support
-[Plant Sciences Institute, Iowa State University](https://plantsciences.iastate.edu/)
+[Plant Sciences Institute, Iowa State University](https://www.psi.iastate.edu/faculty-scholars)
 
 ### Total Award Amount
-$ 225,000
+
 
 ### Total Award Period Covered
 02/01/2018 - 06/30/2024 
