--- a/content/publication/AAC2012.md
+++ b/content/publication/AAC2012.md
@@ -1,5 +1,5 @@
 ---
-abstract: "Campylobacter jejuni is a major zoonotic pathogen transmitted to humans via the food chain and is prevalent in chickens, a natural reservoir for this pathogenic organism. Due to the importance of macrolide antibiotics in clinical therapy of human campylobacteriosis, development of macrolide resistance in Campylobacter has become a concern for public health. To facilitate the control of macrolide-resistant Campylobacter, it is necessary to understand if macrolide resistance affects the fitness and transmission of Campylobacter in its natural host. In this study we conducted pairwise competitions and comingling experiments in chickens using clonally related and isogenic C. jejuni strains, which are either susceptible or resistant to erythromycin (Ery). In every competition pair, Ery-resistant (Ery(r)) Campylobacter was consistently outcompeted by the Ery-susceptible (Ery(s)) strain. In the comingling experiments, Ery(r) Campylobacter failed to transmit to chickens precolonized by Ery(s) Campylobacter, while isogenic Ery(s) Campylobacter was able to transmit to and establish dominance in chickens precolonized by Ery(r) Campylobacter. The fitness disadvantage was linked to the resistance-conferring mutations in the 23S rRNA. These findings clearly indicate that acquisition of macrolide resistance impairs the fitness and transmission of Campylobacter in chickens, suggesting that the prevalence of macrolide-resistant C. jejuni will likely decrease in the absence of antibiotic selection pressure."
+abstract: Campylobacter jejuni is a major zoonotic pathogen transmitted to humans via the food chain and is prevalent in chickens, a natural reservoir for this pathogenic organism. Due to the importance of macrolide antibiotics in clinical therapy of human campylobacteriosis, development of macrolide resistance in Campylobacter has become a concern for public health. To facilitate the control of macrolide-resistant Campylobacter, it is necessary to understand if macrolide resistance affects the fitness and transmission of Campylobacter in its natural host. In this study we conducted pairwise competitions and comingling experiments in chickens using clonally related and isogenic C. jejuni strains, which are either susceptible or resistant to erythromycin (Ery). In every competition pair, Ery-resistant (Ery(r)) Campylobacter was consistently outcompeted by the Ery-susceptible (Ery(s)) strain. In the comingling experiments, Ery(r) Campylobacter failed to transmit to chickens precolonized by Ery(s) Campylobacter, while isogenic Ery(s) Campylobacter was able to transmit to and establish dominance in chickens precolonized by Ery(r) Campylobacter. The fitness disadvantage was linked to the resistance-conferring mutations in the 23S rRNA. These findings clearly indicate that acquisition of macrolide resistance impairs the fitness and transmission of Campylobacter in chickens, suggesting that the prevalence of macrolide-resistant C. jejuni will likely decrease in the absence of antibiotic selection pressure.
 abstract_short: ""
 authors:
 - Taradon Luangtongkum
@@ -11,7 +11,7 @@ authors:
 - Qijing Zhang
 date: 2012-03-31
 header:
-  caption: "Impaired Fitness and Transmission of Macrolide-Resistant Campylobacter jejuni in Its Natural Host"
+  caption: "Impaired fitness and transmission of macrolide-resistant Campylobacter jejuni in its natural host"
   image: headers/bubbles-wide.jpg
 image_preview: ""
 math: true
