--- a/content/publication/ISME2022.md
+++ b/content/publication/ISME2022.md
@@ -29,7 +29,7 @@ publication_short: In *Crop Science*
 publication_types:
 - "2"
 selected: true
-title: "M. Qi, J. C. Berry, K. Veley, L. O’Connor, O. M. Finkel, I. Salas-González, M. Kuhs, J. Jupe, E. Holcomb, T.G. del Rio, C. Creech, P. Liu, S. Tringe, J. L. Dangl, D. Schachtman, R. S. Bart (2022), Identification of beneficial and detrimental bacteria impacting sorghum responses to drought using multi-scale and multi-system microbiome comparisons, ISME J."
+title: "M. Qi, J. C. Berry, K. Veley, L. O’Connor, O. M. Finkel, I. Salas-González, M. Kuhs, J. Jupe, E. Holcomb, T.G. del Rio, C. Creech, P. Liu*, S. Tringe, J. L. Dangl, D. Schachtman, R. S. Bart (2022). Identification of beneficial and detrimental bacteria impacting sorghum responses to drought using multi-scale and multi-system microbiome comparisons, ISME J."
 url_code: ''
 url_custom:
 - name: Link
