--- a/content/publication/JNR2020.md
+++ b/content/publication/JNR2020.md
@@ -24,7 +24,7 @@ publication_short: In *JNR*
 publication_types:
 - "2"
 selected: true
-title: "J. Bao, Y. Yu, H. Li, J. Hawks, G. Szatkowski, B. Dade, H. Wang*, P. Liu*, T. Brutnell, B. Spehar, N. Tye-Murray (2020), Evidence for Independent Peripheral and Central Age-Related Hearing Impairment, Journal of Neuroscience Research."
+title: "J. Bao, Y. Yu, H. Li, J. Hawks, G. Szatkowski, B. Dade, H. Wang*, P. Liu*, T. Brutnell, B. Spehar, N. Tye-Murray (2020). Evidence for Independent Peripheral and Central Age-Related Hearing Impairment, Journal of Neuroscience Research."
 url_code: ''
 url_custom:
 - name: Link
