--- a/content/publication/JOSS2019.md
+++ b/content/publication/JOSS2019.md
@@ -17,7 +17,7 @@ publication_short: In *Journal of Open Source Software*
 publication_types:
 - "2"
 selected: true
-title: "M. He, K. Wimalanathan, P. Liu, C.J. Lawrence-Dill (2019), Compare Expression Profiles for Pre-defined Gene Groups with C-REx. Journal of Open Source Software, 4(37), 1255."
+title: "M. He, K. Wimalanathan, P. Liu*, C.J. Lawrence-Dill (2019). Compare Expression Profiles for Pre-defined Gene Groups with C-REx. Journal of Open Source Software, 4(37), 1255."
 url_code: ''
 url_custom:
 - name: Link
