--- a/content/publication/MCB2002.md
+++ b/content/publication/MCB2002.md
@@ -21,7 +21,7 @@ publication_short: In *MCB*
 publication_types:
 - "2"
 selected: false
-title: "N.-S. Tan, N. Shaw, N. Vinckenbosch, P. Liu, R. Yasmin, B. Desvergne, W. Wahli, and N. Noy (2002). Selective cooperation between fatty acid binding proteins and peroxisome proliferator-activated receptors in regulating transcription. Molecular and Cellular Biology, 22(14): 5114-5127."
+title: "N.-S. Tan, N. Shaw, N. Vinckenbosch, P. Liu*, R. Yasmin, B. Desvergne, W. Wahli, and N. Noy (2002). Selective cooperation between fatty acid binding proteins and peroxisome proliferator-activated receptors in regulating transcription. Molecular and Cellular Biology, 22(14): 5114-5127."
 url_custom:
 - name: Link
   url: http://mcb.asm.org/content/22/14/5114
